--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "11.11.0",
-    "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "5.11.16",
-    "@mui/material": "5.13.0",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "7.0.2",
+    "@dnd-kit/utilities": "3.2.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -30,8 +33,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "prettier": "3.0.3",
+    "prettier": "^3.0.3",
     "vite": "^4.3.2",
-    "vite-plugin-svgr": "3.2.0"
+    "vite-plugin-svgr": "^3.2.0"
   }
 }
